--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,60 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 10px; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.alert-green{
+  color: green;
+}
+
+.alert-yellow{
+  color: yellow;
+}
+
+.alert-orange{
+  color: orange;
+}
+
+.alert-red{
+  color: red;
+}
+
+.alert-dark-red{
+  color: darkred;
+}
+
+.spacer{
+  flex: 1 1 auto;
+}
+
+
+.radio-group{
+  display: flex;
+  flex-direction: column;
+  margin: 15px 0;
+}
+
+.radio-button{
+  margin: 5px;
+}
+
+.center-container{
+  display: flex;
+  justify-content: center;
+}
+
+.columns{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.column{
+  width: 350px;
+}
+
+.info-icon{
+  font-size: 20px;
+  margin-bottom: 8px;
+  margin-left: -12px; /* FIXME!!! */
+}
+
